[package]
name = "os"
version = "0.1.0"
authors = ["Guo-lab <1811400940@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#***************************************************************************************************
# panic abort,还没有实现堆栈展开功能
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

#***************************************************************************************************

[dependencies]
