[package]
name = "os"
version = "0.1.0"
authors = ["Guo-lab <1811400940@qq.com>"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# panic abort,还没有实现堆栈展开功能
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"







[dependencies]
# interrupt/Context 时添加依赖
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
# 动态分配内存时添加
spin = "0.5.2"
buddy_system_allocator = "0.7.0"
