[package]
name = "os"
version = "0.1.0"
authors = ["Guo-lab <1811400940@qq.com>"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# panic abort,还没有实现堆栈展开功能
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"







[dependencies]
# interrupt/Context 时添加依赖
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

# 动态分配内存时添加
buddy_system_allocator = "0.7.0"

# lazy_static! 的引用 2021-3-12
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# segment_tree 2021-3-12
bit_field = "0.10.0"
# spin::Mutex<T> 
spin = "0.5.2"
# a long time to check this out
# create it by self
algorithm = { path = 'src/algorithm' }
